apps/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  namespace: hedgedoc
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  selector:
    app: hedgedoc
  ports:
    - name: http
      port: 3000
      targetPort: 3000
